styles/pages/pricing.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: #edf3f8 0% 0% no-repeat padding-box;
}

main {
  padding-inline: 1.5rem;
}

header {
  padding-inline: 24px;
}

.pricing h1 {
  width: 20.438rem;
  height: 2.75rem;
  margin: auto;
  margin-bottom: 2.75rem;
  margin-top: 3.217rem;
  text-align: center;
  font-size: 2rem;
  letter-spacing: -0.016rem;
  color: var(--color-primary-pink);
}

.pricing-cards {
  margin: auto;
  width: 20.438rem;
  display: grid;
  grid-template-columns: 20.438rem;
  grid-template-rows: repeat(3, 1fr);
  grid-row-gap: 3.438rem;
}

.price-card {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.price-card h2 {
  font-size: 1.5rem;
  text-align: center;
  letter-spacing: -0.011rem;
  color: var(--color-secondary-title-text);
  margin-top: 0;
  margin-bottom: 0.563rem;
}

.price-card p {
  margin-top: 0;
  margin-bottom: 1.875rem;
  text-align: center;
  color: var(--color-secondary-title-text);
  font-size: 0.938rem;
  line-height: 1.75rem;
  font-family: var(--font-text);
  opacity: 70%;
}

p.price {
  color: var(--color-primary-pink);
  font-size: 3.5rem;
  text-align: center;
  letter-spacing: -0.027rem;
  margin: 0;
  height: 4.813rem;
  line-height: normal;
  font-family: var(--font-title);
  opacity: 100%;
}

.price-card hr {
  width: 100%;
  height: 1px;
  border: none;
  background-color: var(--color-secondary-title-text);
  opacity: 0.25;
}

.menu {
  width: 7.688rem;
  padding: 0;
  list-style: none;
  font-family: var(--font-text);
  color: var(--color-primary-pink);
}

.menu li {
  display: flex;
  align-items: center;
  gap: 1.5rem;
  margin-top: 0.938rem;
  margin-bottom: 0.938rem;
  font-size: 0.875rem;
}

.menu li:first-child {
  margin-top: 1.5rem;
}

.menu li:last-child {
  margin-bottom: 1.938rem;
}

.menu li.done::before {
  content: "✓";
  font-weight: bold;
  color: var(--color-secondary-title-text);
}

.menu li.disabled {
  color: var(--color-secondary-active);
  padding-left: 2.25rem;
}

.pricing button {
  background: none;
  border: 1px solid var(--color-secondary-title-text);
  border-radius: 24px;
  height: 48px;
  width: 168px;
  color: var(--color-secondary-title-text);
  font-family: var(--font-text);
  font-weight: bold;
  font-size: 0.938rem;
  letter-spacing: -0.007rem;
  margin-top: 1.75rem;
  margin-bottom: 3.438rem;
}

.pricing button:hover {
  background-color: var(--color-secondary-title-text);
  color: var(--color-primary-white);
}

@media (min-width: 768px) {
  main {
    padding-inline: 2.5rem;
  }

  .pricing {
    margin: auto;
    width: 689px;
  }

  .pricing h1 {
    width: 21.188rem;
    height: 4.125rem;
    margin-bottom: 3.563rem;
    margin-top: 5.404rem;
    font-size: 3rem;
    letter-spacing: -0.023rem;
  }

  .pricing-cards {
    margin: 0;
    grid-template-columns: repeat(3, 13.938rem);
    grid-template-rows: 1fr;
    grid-column-gap: 10px;
    grid-row-gap: 0px;
  }

  .price-card h2 {
    margin-bottom: 1rem;
  }

  p.price {
    font-size: 3rem;
    letter-spacing: -0.023rem;
    line-height: normal;
  }

  .menu {
    height: 14.813rem;
    margin-bottom: 1.938rem;
    margin-top: 1.938rem;
  }

  .menu li {
    font-size: 1rem;
  }

  .pricing button {
    height: 48px;
    width: 168px;
    font-size: 0.938rem;
    letter-spacing: -0.007rem;
    margin-top: 1.75rem;
    margin-bottom: 6.625rem;
  }
}

@media (min-width: 1440px) {
  main {
    padding-inline: 10.313rem;
  }

  .pricing {
    margin: auto;
    width: 1110px;
  }

  .pricing h1 {
    width: 546px;
    height: 4.813rem;
    margin-bottom: 3.75rem;
    margin-top: 5rem;
    margin-inline: 0;
    text-align: left;
    font-size: 3.5rem;
    letter-spacing: -0.027rem;
  }

  .pricing-cards {
    width: 69.375rem;
    grid-template-columns: repeat(3, 21.875rem);
    grid-template-rows: 1fr;
    grid-column-gap: 1.875rem;
    grid-row-gap: 0px;
  }

  .price-card {
    align-items: start;
  }

  .price-card h2 {
    font-size: 2rem;
    text-align: left;
    letter-spacing: -0.016rem;
    margin-top: 0;
    margin-bottom: 0.313rem;
  }

  .price-card p {
    margin-top: 0;
    margin-bottom: 1.875rem;
    text-align: left;
    font-size: 0.938rem;
  }

  p.price {
    font-size: 3.5rem;
    text-align: left;
    letter-spacing: -0.027rem;
    margin: 0;
    height: 4.813rem;
  }

  .price-card hr {
    border: 1px solid var(--color-secondary-title-text);
  }

  .menu {
    width: 21.875rem;
    height: 16.875rem;
  }

  .menu li {
    font-size: 1rem;
  }

  .menu li.disabled {
    color: var(--color-secondary-active);
    padding-left: 2.25rem;
  }

  .pricing button {
    width: 168px;
    height: 48px;
    font-size: 0.938rem;
    letter-spacing: -0.007rem;
  }
}

